objects/Asset.object
<CustomObject>
    <fields>
        <fullName>Flavor_Pak_Replacement_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean to indicate whether a Flavor Pak for this asset needs to be replaced.</description>
        <label>Flavor Pak Replacement Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Pressure__c</fullName>
        <description>Maximum recommended tire pressure.</description>
        <label>Max Pressure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Output_Wattage__c</fullName>
        <description>Expected output wattage of panel.</description>
        <label>Output Wattage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Mileage__c</fullName>
        <description>Recommended tire mileage.</description>
        <label>Recommended Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serial_No__c</fullName>
        <description>Serial Number of the asset.</description>
        <externalId>true</externalId>
        <label>Serial No</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cells__c</fullName>
        <description>Total number of photovoltaic cells on this panel model.</description>
        <label>Total Cells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>